--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
 	box-sizing: border-box;
 	background-color: #cacaca;
 	color: #424242;
+	font: 16px Verdana, sans-serif;
 }
 
 .container {
@@ -14,3 +15,44 @@ body {
 h1 {
 	text-align: center;
 }
+
+form {
+	display: flex;
+	flex-direction: column;
+	max-width: 700px;
+	margin: auto;
+}
+
+form label {
+	text-align: center;
+	padding: 10px;
+}
+
+form input[type="text"] {
+	padding: 1em;
+}
+
+form input[type="submit"] {
+	padding: 1em 2em;
+	background-color: dodgerblue;
+	color: #fefefe;
+	width: 200px;
+	display: block;
+	margin: 20px auto;
+}
+
+.project-detail {
+	border:1px solid;
+	background-color: #a9a9a9;
+	display: flex;
+	padding: 10px;
+}
+
+h3 {
+	color: yellow;
+}
+
+ul {
+	list-style-type: none;
+}
+
