Exp. with localStorage

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,14 @@ form {
 	margin: auto;
 }
 
+form button{
+	width: 100px;
+	padding: 1em 2em;
+	background-color: pink;
+	border:3px solid #fff;
+	margin-top: 10px;
+}
+
 form label {
 	text-align: center;
 	padding: 10px;
