--- a/styles.css
+++ b/styles.css
@@ -33,12 +33,13 @@ form button{
 
 form label {
 	text-align: center;
-	padding: 10px;
+	padding: 20px;
 }
 
-form input[type="text"] {
+#project-name {
 	padding: 1em;
 }
+
 
 form input[type="submit"] {
 	padding: 1em 2em;
@@ -53,13 +54,20 @@ form input[type="submit"] {
 	border:1px solid;
 	background-color: #a9a9a9;
 	display: flex;
-	padding: 10px;
+	padding: 0px;
+	align-items: center;
 }
 
 h3 {
 	color: yellow;
+	padding: 10px;
 }
 
+#instrument-name {
+	padding: 10px;
+	width: 200px;
+	margin-left: 100px;
+}
 ul {
 	list-style-type: none;
 }
